--- a/notebooks/01_EDA.ipynb
+++ b/notebooks/01_EDA.ipynb
@@ -232,6 +232,25 @@
   },
   {
    "cell_type": "markdown",
+   "id": "76f2d9d4-d294-4303-9f93-ae65482bd882",
+   "metadata": {},
+   "source": [
+    "## Dataset Overview\n",
+    "\n",
+    "The dataset contains 105,217 rows and 319 columns.  \n",
+    "Most columns are continuous sensor measurements (value_0 to value_315), along with:\n",
+    "- id_series: identifies the time series source  \n",
+    "- date: timestamp  \n",
+    "- time_step: sequence index  \n",
+    "\n",
+    "### Key observations:\n",
+    "- Nearly all features are numerical and high-dimensional (316+ features).\n",
+    "- Many columns contain long stretches of zeros, indicating sparse patterns.\n",
+    "- The dataset size is large but manageable, requiring efficient preprocessing."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "2200df40-268e-44a4-b0f3-341228ce8f78",
    "metadata": {},
    "source": [
@@ -477,13 +496,29 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3b1e5f63-46e2-404f-a2d5-d12c90a7ac08",
+   "metadata": {},
+   "source": [
+    "## Distribution Observations\n",
+    "\n",
+    "The summary statistics show:\n",
+    "- Many features have min = 0 and median close to 0, which suggests:\n",
+    "    - strong right skew  \n",
+    "    - many zero-valued observations  \n",
+    "- Some features have extremely large maximum values compared to their mean, indicating presence of outliers.\n",
+    "- Variance differs significantly across features, so normalization or scaling may be necessary.\n",
+    "These patterns confirm that naive models may struggle with raw, unscaled inputs."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "11387981-4acf-42c6-9d21-59bdcc700f1a",
    "metadata": {},
    "source": [
     "## Distribution of Features\n",
     "\n",
-    "To understand how each variable is distributed, I plot histograms for all features.  \n",
-    "This helps me identify skewness, outliers, and unusual patterns that might affect modeling."
+    "To understand how each variable is distributed, we plot histograms for all features.  \n",
+    "This helps us identify skewness, outliers, and unusual patterns that might affect modeling."
    ]
   },
   {
@@ -634,6 +669,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d928863b-6bf4-496c-8208-a2952b8eaa36",
+   "metadata": {},
+   "source": [
+    "### Correlation Findings\n",
+    "\n",
+    "- Correlations with value_0 are generally low (< 0.3).\n",
+    "- Only a few sensor channels show moderate correlation.\n",
+    "- This indicates that relationships are nonlinear.\n",
+    "- Linear regression may struggle without feature engineering.\n",
+    "\n",
+    "This motivates the use of tree-based models and dimensionality reduction."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "id": "67a71020-28d0-476f-acca-52fd7d852563",
@@ -659,12 +709,43 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a909f4ec-d63e-43ee-adba-bbd67bcd5035",
+   "cell_type": "markdown",
+   "id": "46214c44-3fb7-4da5-b604-f4e08698fa2c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Pairwise Visualization Insights\n",
+    "\n",
+    "Pairplots of selected features show:\n",
+    "\n",
+    "- Curved, nonlinear relationships  \n",
+    "- Several clusters  \n",
+    "- Large variance differences  \n",
+    "- Sparse patterns  \n",
+    "\n",
+    "These visual insights support using nonlinear models and dimensionality reduction methods."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "92aa90c6-2697-484b-b67a-a1500560a629",
+   "metadata": {},
+   "source": [
+    "# EDA Conclusions and Next Steps\n",
+    "\n",
+    "### Key Insights:\n",
+    "- The dataset is high-dimensional (319 features).\n",
+    "- Features are skewed, sparse, and contain outliers.\n",
+    "- Time-based patterns likely play an important role.\n",
+    "- Correlations with the target are weak → nonlinear modeling needed.\n",
+    "\n",
+    "### Implications:\n",
+    "- Dimensionality reduction (SRP) will be needed.\n",
+    "- Normalization is necessary for sensitive models.\n",
+    "- Baseline models will perform poorly (as expected).\n",
+    "- Gradient Boosting and nonlinear approaches will be better choices.\n",
+    "\n",
+    "This EDA sets the foundation for preprocessing, modeling, and improvement steps."
+   ]
   }
  ],
  "metadata": {
